--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -1,3 +1,5 @@
 @import './assets/scss/typography';
 @import './assets/scss/function';
 @import './assets/scss/global';
+
+@import "./assets/scss/Login/index";
