--- a/front/src/assets/scss/_global.scss
+++ b/front/src/assets/scss/_global.scss
@@ -20,3 +20,14 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 }
+.container-fluid{
+	height: 100vh;
+	width: 100vw;
+	.row{
+		height: inherit;
+	}
+}
+
+button{
+	min-width: vw(100px);
+}
